--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,27 @@ body {
   margin: auto;
   height: 100%;
   min-height: 100vh;
-  background-color: #f5f5f5;
-  color: #333333;
+  background-color: white;
+  color: rgb(3, 45, 54, .85);
+}
+
+/* scroll bar */
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+/* Track */
+::-webkit-scrollbar-track {
+  background: whitesmoke;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #032d36;
+  border-radius: 5px;
+}
+
+/* input settings */
+input {
+  outline: none;
 }
